--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,9 @@ dependencies:
   flutter:
     sdk: flutter
   google_fonts: ^2.1.0
-
+  firebase_core: ^1.3.0
+  google_sign_in: ^5.0.4
+  google_sign_in_web: ^0.10.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
